Fix breadcrumb spacing

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -26,6 +26,7 @@ nav.dingle-breadcrumbs {
 
         &:not(:last-of-type)::after {
             content: " /";
+            padding-right: .3rem;
         }
     }
 }
